--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,11 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.3.2"
+    "firebase-functions": "^5.1.1"
   },
-  "private": true
+  "private": true,
+  "version": "1.0.0",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
